# blanq

./: CMakeLists.txt  README.md
.github/workflows/: test-ubuntul-expected-clang.yml  test-ubuntul-expected-gcc.yml  test-ubuntul-unexpected-clang.yml  test-ubuntul-unexpected-gcc.yml  test-ubuntul-unexpected.yml  test_ubuntul.yml
include/: test-constrained-fold.hpp
src/: test-constrained-fold-explicit.cpp  test-constrained-fold-implicit.cpp  test-instantiate-using-lambda-explicit-default.cpp  test-instantiate-using-lambda-explicit.cpp  test-instantiate-using-lambda-implicit-default.cpp  test-instantiate-using-lambda-implicit.cpp
